Update Assignment 1 Type Conversion Solutions.ipynb

--- a/Assignment 1 Type Conversion Solutions.ipynb
+++ b/Assignment 1 Type Conversion Solutions.ipynb
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "# Q1 Ans: Covert a iteger to a floatig-poit umber.\n",
+    "# Q1 Ans: Convert a integer to a floating-point number.\n",
     "int_num = 57\n",
     "float_num = float(int_num)\n",
     "print(float_num)"
@@ -36,7 +36,7 @@
     }
    ],
    "source": [
-    "# Q2 Ans: Covert a float to a iteger.\n",
+    "# Q2 Ans: Convert a float to a integer.\n",
     "float_num = 75.89\n",
     "int_num = int(float_num)\n",
     "print(int_num)"
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "# Q3 Ans: Covert a iteger to a string\n",
+    "# Q3 Ans: Convert a integer to a string\n",
     "int_num = 75\n",
     "my_str = str(int_num)\n",
     "print(my_str, type(my_str))"
@@ -78,7 +78,7 @@
     }
    ],
    "source": [
-    "# Q4 Ans: Covert a list to a tuple.\n",
+    "# Q4 Ans: Convert a list to a tuple.\n",
     "list1 = [1,5, \"Riya\", \"Strawberry\"]\n",
     "tup = tuple(list1)\n",
     "print(tup)\n"
@@ -99,7 +99,7 @@
     }
    ],
    "source": [
-    "# Q5 Ans: Covert a tuple to a list.\n",
+    "# Q5 Ans: Convert a tuple to a list.\n",
     "tup1 = (75, 89, 53, \"Satyam\")\n",
     "list1 = list(tup)\n",
     "print(list1)"
@@ -120,7 +120,7 @@
     }
    ],
    "source": [
-    "# Q6 Ans: Covert a decimal number to binary.\n",
+    "# Q6 Ans: Convert a decimal number to binary.\n",
     "dec_num = 83\n",
     "bin_num = bin(dec_num)\n",
     "print(bin_num)"
@@ -141,7 +141,7 @@
     }
    ],
    "source": [
-    "# Q7 Ans: Covert a non-zero umber to boolean.\n",
+    "# Q7 Ans: Convert a non-zero number to boolean.\n",
     "num = 87.98\n",
     "bool_num = bool(num)\n",
     "print(bool_num)"
